# crm

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
crm/crm/: settings.py  urls.py
crm/webapp/: forms.py  models.py  urls.py  views.py
crm/webapp/migrations/: 0001_initial.py
crm/webapp/templates/: add_record.html  base.html  home.html  navbar.html  record.html  register.html
